fix tags container alignment

--- a/src/Components/Project/project.scss
+++ b/src/Components/Project/project.scss
@@ -34,7 +34,7 @@
     max-width: 40rem;
 }
 
-.tags--container {
+.tags--container-main {
     display: flex;
     flex-direction: row;
     margin: 1rem auto 3rem auto;
